1999-05-29  Tuomas Kuosmanen  <tigert@gimp.org>

	* gimp1_1_splash.ppm: New splash - enjoy while it lasts..

1999-05-28  Tor Lillqvist  <tml@iki.fi>

	Merge in Win32 changes to plug-ins. Small Win32-related changes
	to app and libgimp.

	* configure.in: Check for mmap.

	* app/makefile.msc: Depend on gimpi.lib.
	
	* app/app_procs.c (app_init): Fix gccism: Allocate filenames (an
	array with non-constant size) dynamically.

	* app/{datafiles,fileops,general,install,module_db,temp_buf}.c:
	Include glib.h before standard headers, because of certain obscure
	details related to compiling with gcc on Win32.

	(If you really want to know: glib.h defines he names of POSIXish
	(but non-ANSI) functions as prefixed with underscore, because
 	that's how they are named in the msvcrt runtime C library we want
 	to use. However, defining stat as _stat causes some problems if
 	done after including the mingw32 <sys/stat.h>. So, it's easiest to
 	include <glib.h> early.)

	* app/main.c: Use _stdcall and __argc, __argv with MSC, but
 	__attribute__((stdcall)) and _argc, _argv with gcc. Don't print
 	the "Passed serialization test" message on Win32. (It would open
 	up an otherwise unnecessary console window.)

	* app/paint_funcs.c (gaussian_blur_region): Don't use variable sum
 	until initialized.

	* app/{bezier_select,paths_dialog}.c: Include config.h and define
 	rint() if necessary.

	* app/plug_in.c: Use _spawnv, not spawnv, on Win32 and OS/2.
	
	* libgimp/gimp.c: No need for <io.h> on Win32.

	* libgimp/{gimp,gimpui}.def: Add two entry points.

	* libgimp/gimp.h: Can't use __declspec(dllexport) for PLUG_IN_INFO
 	when compiling with gcc on Win32. Also handle __argc, __argv and
 	_stdcall differently with gcc on Win32

	* libgimp/gimpenv.c: Include <string.h>.

	* libgimp/gimpfeatures.h.in: Remove lots of extraneous trailing blanks.

	* libgimp/gimpfileselection.c: Include <glib.h> early, see above.

	* libgimp/{gimpwire,parasite}.c: Test for NATIVE_WIN32, not
	_MSC_VER.
