@@ -18,13 +18,13 @@ TOUCH = copy makefile.msc+nul
 
 GIMP_VER = 1.1
 GTK_VER = 1.3
-GLIB_VER = 1.2
+GLIB_VER = 1.3
 
-GLIB = ..\..\glib-$(GLIB_VER)
+GLIB = ..\..\glib
 GMODULE = $(GLIB)\gmodule
-GTK = ..\..\gtk-plus
+GTK = ..\..\gtk+
 
-CFLAGS = -DHAVE_CONFIG_H -DMODULE_COMPILATION -I. -I.. -I$(GLIB) -I$(GMODULE) -I$(GTK)
+CFLAGS = -DHAVE_CONFIG_H -DMODULE_COMPILATION -I. -I.. -I$(GLIB) -I$(GMODULE) -I$(GTK)\gdk\win32 -I$(GTK)
 
 MODULES = colorsel_gtk.dll	\
 	colorsel_triangle.dll
